# nexus-os

./: .eslintrc.json  .gitignore  .prettierrc  ALPHA-RELEASE-SUMMARY.md  ALPHA_COMPLETION_SUMMARY.md  ALPHA_RELEASE_READINESS_REPORT.md  Analysis.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DISTROWATCH_SUBMISSION.md  Dockerfile  FUNCTIONAL_CODE_REWRITE_PLAN.md  GLOBAL_RULE.md  INSTALL.md  INTEGRATION_COMPLETE.md  LICENSE  MILESTONE-LIVE-ISO-SUCCESS.md  Makefile  OPTIMIZATION_PLAN.md  PHASE5_ARCHITECTURE.md  PHASE6_NEXUSTERMINAL.md  PHASE_1_IMPLEMENTATION.md  PROJECT_STATUS.md  PUBLIC-RELEASE-CHECKLIST.md  README-original.md  README-public.md  README.md  README_OLD.md  RELEASE_CHECKLIST.md  ROADMAP.md  UNIVERSAL_PACKAGE_MANAGER_SPEC.md  WARP.md  build  build-nexusos-demo.sh  build-nexusos.sh  compile-custom-kernel.sh  config.mk  (+39 more)
.github/: PULL_REQUEST_TEMPLATE.md
all-scripts/: README.md  check-vfio-setup.sh  fix-diablo4-gpu-detection.sh  fix_wine_diablo4.sh  setup-cluster.sh  setup-proxmox-ssh.sh  start-gaming-vm-new.sh  stop-gaming-vm-new.sh  stop-gaming-vm.sh  vm-network-config.txt  vm-setup-checker.sh
android-app/: settings.gradle
autoinstall_scripts/: PW_ACTIVISION_LAUNCHER  PW_AUTO_DETECT_ALL_GAMES  PW_CURSEFORGE  PW_DISCORD  PW_EA_APP  PW_GEFORCE_NOW  PW_LAST_EPOCH_DIRECT  PW_MAFIA_III_DIRECT  PW_MULTIMC  PW_PHOENIX_POINT_DIRECT  PW_RIOT_GAMES  PW_STEAM_GAMES_PARSER
boot/: boot.s  stage1.s
clients/: firetv.md
core/: enhanced_qemu_runner.py
core/ai/sysadmin/src-tauri/: Cargo.toml  tauri.conf.json
core/ai/sysadmin/src-tauri/src/: fan_controller.rs  hardware_manager.rs  learning_engine.rs  package_manager.rs  security_manager.rs  system_controller.rs
core/ai/sysadmin/src-tauri/src/ai/: natural_language.rs
core/ai/sysadmin/src-tauri/src/commands/: ai_extended.rs  hardware.rs  mod.rs  rgb.rs
core/ai/sysadmin/src-tauri/src/hardware/: mod.rs
core/ai/sysadmin/src-tauri/src/system/: mod.rs  ollama.rs
deployment/: deploy-awesome-stack-optimization.sh
distro/: os-release
docs/: AI.md  AI_NATIVE_ARCHITECTURE.md  COMPONENT-INVENTORY.md  CONSOLIDATION.md  GAMING.md  NETWORKING.md  NEXUS-OS-SOURCE-OF-TRUTH.md  PLAN.md  REAL-DEBRID.md  RETRO-GAMING.md  media-center-plan.md  mount-qcow.md  proxmox-wifi-setup.md  security-audit.md
gaming/: opengl-force-mode.ps1
garuda-host/: cpu-optimize.sh  deploy-vm-optimization.sh  optimize-proxmox-vm.sh
installer/: CHANGELOG.md  INSTALL.md  README.md  WARP.md  nexus-install.sh
iso-build/: README-SYSTEM-CLONE.md  build-ai-powerhouse-iso-from-system.sh  validate-setup.sh
iso_root/: limine-bahamut.conf  limine-laptop-uefi.conf  limine-laptop.conf  limine-tiamat-uefi.conf  limine-tiamat.conf
kernel/: Cargo.toml  build.rs  main.c  main_minimal.c  nexus-aarch64.ld  nexus-x86_64.ld  rust-toolchain.toml  serial.c
kernel/.cargo/: config.toml
kernel/arch/: gdt.c  gdt_load.s  idt.c  idt_load.s  isr.s
kernel/arch/x86_64/: boot.s
kernel/device/: device.c
kernel/drivers/: ata.c  ata.h  block.c  console.c  keyboard.c  kshell.c  pci.c  vga.c  virtio_net.c
kernel/exec/: elf.c  elf.h
kernel/fs/: fat.c  fat.h  ramfs.c  ramfs.h  vfs.c  vfs.h
kernel/gpu/: autoscale.c  cluster.c  comm_opt.c  container.c  dist_inference.c  federated.c  gpu.c  gpu_cache.c  grad_sync.c  ml_framework.c  model_cache.c  model_registry.c  model_runtime.c  model_serving.c  pipeline.c  resource_scheduler.c  telemetry.c  tenant.c  training.c
kernel/include/: pkg_compat.h
kernel/init/: main.c
kernel/irq/: irq.c  irq_mgr.c  pic.c  timer.c
kernel/mm/: dma.c  heap.c  paging.c  pmem.c
kernel/net/: arp.c  ethernet.c  icmp.c  ipv4.c  netdev.c  packet.c  tcp.c  udp.c
kernel/pkg/: nexuspkg.c  nexuspkg.h  pkg_compat.c
kernel/proc/: context.s  scheduler.c  task.c  thread.c
kernel/security/: acl.c
kernel/src/: main.rs  panic.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: exceptions.rs  mod.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  interrupts.rs  keyboard_irq.rs  mod.rs  timer_isr.rs
kernel/src/drivers/: mod.rs  pci.rs
kernel/src/drivers/virtio/: blk.rs  mod.rs
kernel/src/exec/: mod.rs
kernel/src/fs/: fat.rs  mod.rs
kernel/src/installer/: crc32.rs  gpt.rs  mod.rs
kernel/src/io/: font8x8.rs  framebuffer.rs  keyboard.rs  mod.rs  serial.rs  uart.rs
kernel/src/ipc/: mod.rs  ports.rs
kernel/src/memory/: heap.rs  mod.rs  paging.rs  physical.rs
kernel/src/process/: mod.rs
kernel/src/scheduler/: mod.rs
kernel/src/syscall/: mod.rs
kernel/src/syscall/handlers/: mod.rs  syscall_gpu_mmap.rs  syscall_ipc_query.rs  syscall_ipc_timeout.rs
kernel/src/timer/: mod.rs  pic.rs  pit.rs
kernel/src/userspace/: hello.asm  mod.rs  shell_init.asm
kernel/sync/: futex.c  mutex.c
kernel/syscall/: stubs.s  syscall.c
legacy/: CMakeLists.txt  README.old.md
lib/: string.c
media-stack/: .env.example
nexusos-zfs-profile/: packages.x86_64  pacman.conf  profiledef.sh
pi/: setup-anydesk.sh  setup-dietpi.sh  setup-vnc.sh
profiles/: proxmox-ve.json
proxmox/: create-proxmox-vm-simple.sh  fix-proxmox-ssl.sh  proxmox-post-install.sh  storage.conf  vm-network-config.txt  vm-windows-playon.md
scripts/: build-iso.sh  fix-lightdm.sh  nexus-consolidate.py  patch-iso.sh  phase5-integration-test.sh  setup-gaming.sh  setup-laptop-optimizations.sh  setup-repo.sh  setup-tiamat-optimize.sh  validate-jellyfin.sh
src/: App.css  App.vue  (+1 more)
src-tauri/: tauri.conf.json  test_compile.rs
userspace/apps/ai-coding-assistant/src-tauri/: Cargo.toml
userspace/apps/ai-coding-assistant/src-tauri/src/: errors.rs  lib.rs  lib_complex.rs  logger.rs  main.rs
userspace/apps/ai-coding-assistant/src-tauri/src/modules/: ai_module.rs  alexa_integration.rs  code_intelligence.rs  config.rs  memory_system.rs  mod.rs  multimodal_ai.rs  ollama.rs  project_context.rs  tools.rs
userspace/apps/omniosearch/src-tauri/: Cargo.toml
userspace/apps/omniosearch/src-tauri/src/: ai.rs  db.rs  main.rs
userspace/nexus-ai/: Cargo.toml
userspace/nexus-ai/src/: inference.rs  ipc.rs  main.rs  ollama_client.rs
(+472 files in other folders)
