[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "1.0", features = [ "global-shortcut-all", "shell-sidecar", "notification-all", "dialog-all", "shell-execute", "shell-open", "fs-all", "path-all"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full", "fs"] }
once_cell = "1.19"
sha2 = "0.10"
git2 = "0.18"
walkdir = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
fuzzy-matcher = "0.3"
similar = "2.3"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
anyhow = "1.0"
thiserror = "1.0"
# tauri-updater = "0.4" # Disabled due to compatibility issues
self_update = "0.39"
semver = "1.0"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
infer = "0.15"
notify = "6.0"
# Additional dependencies for new modules
rusqlite = { version = "0.29", features = ["bundled"] }
toml = "0.8"
num_cpus = "1.0"
libloading = "0.8"
futures = "0.3"
